# cp-image-transformation

./: .gitignore  CMakeLists.txt  README.txt  color.cpp  composite_image.cpp  image.cpp  imagetransformproject  main.cpp  pixel.cpp
headers/: brightness_histogram.h  color.h  composite_image.h  image.h  pixel.h
headers/image/: composite_image.h  connected_components.h  image.h  noise.h  scaled_image.h
headers/task/: task.h  task5.h  task6.h  task7.h  task8.h
src/: CMakeLists.txt  brightness_histogram.cpp  color.cpp  composite_image.cpp  image.cpp  pixel.cpp  scaled_image.cpp
src/image/: CMakeLists.txt  brightness_histogram.cpp  color.cpp  composite_image.cpp  connected_components.cpp  image.cpp  noise.cpp  pixel.cpp  scaled_image.cpp
src/task/: CMakeLists.txt  task.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
tests/: CMakeLists.txt  brightness_histogram.cpp  brightness_histogram_test.cpp  composite_image.cpp  composite_image_test.cpp  reflection.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
